--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -5,15 +5,15 @@
 
 \textbf{Author:} Kelghor
 
-\textbf{Version:} 1.4
+\textbf{Version:} 1.5
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1313651865648369725}{Archon Studio Discord}
 
 \textit{"Sir! They're here again!"}
 
-\textit{"Sound the alarm, we'll repel them as always!" you command, and go to defend the city, just as you have done many times before. Such is the hard life of the surrounding clans, with constant wars and skirmishes with nearby neighbors. Fortunately, your alliance is strong, so you know your back is covered.}
+\textit{"Sound the alarm, we'll repel them as always!" you command, and go to defend the city. Just as you have done many times before. Such is the hard life of the surrounding clans, with constant wars and skirmishes with nearby neighbors. Fortunately, your alliance is strong, so you know your back is covered.}
 
-\textit{Therefore, the time has come to end the long-standing wars and crush your enemies once and for all!}
+\textit{Therefore, the time has come to end the long-standing wars and crush your enemies like a bug once and for all!}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 
@@ -72,7 +72,7 @@ Conquer all Settlements by any player.
 \subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
-  \item Players can trade by common rules and additional in time if use a Building token for this action.
+  \item Anytime, any player can spend his Building token and get same actions as he move to Trading post.
   \item When defending the town, and your Hero is not here, you can still use your Units (for free).
   \item Each settlement is defend by clans Settlement defenders. (see below)
 \end{itemize}
@@ -105,6 +105,10 @@ Conquer all Settlements by any player.
       \item Third wave of enemy clan armies attacks the towns. (see below)
       \item Each player who defended his own town, search (3) the \textit{Artifact Deck}.
     \end{itemize}
+    \begin{itemize}
+   \item \textbf{\nth{7} Round:}
+      \item After you draw Might & Magic Cards at start of round, you can once discard any number of Cards and draw a same number of Cards.
+    \end{itemize}
   \end{itemize}
 
 \subsection*{\MakeUppercase{Enemy's clans waves}}
@@ -123,6 +127,7 @@ Conquer all Settlements by any player.
 \subsection*{\MakeUppercase{Settlements defenders}}
 \begin{itemize}
   \item The strength of the army in Settlement is determined by the table \textit{Enemy's Clans armies} (last row).
+  \item After you draw an enemy army, you can discard one enemy Unit Card and draw a new Unit of same Tier.
   \item The battle does not cost any extra movement points.
   \item In this battles, you has to use AI Cards.
   \item After won battle, you gain one Level.
