--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -105,9 +105,9 @@ Conquer all Settlements by any player.
       \item Third wave of enemy clan armies attacks the towns. (see below)
       \item Each player who defended his own town, search (3) the \textit{Artifact Deck}.
     \end{itemize}
-    \begin{itemize}
    \item \textbf{\nth{7} Round:}
-      \item After you draw Might & Magic Cards at start of round, you can once discard any number of Cards and draw a same number of Cards.
+    \begin{itemize}
+      \item After you draw Might and Magic Cards at start of round, you can once discard any number of Cards and draw a same number of Cards.
     \end{itemize}
   \end{itemize}
 
