--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -72,7 +72,7 @@ Conquer all Settlements by any player.
 \subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
-  \item Anytime, any player can spend his Building token and get same actions as he move to Trading post.
+  \item At any time, Players can spend their Building Token to perform the same actions as if they visited a Trading Post.
   \item When defending the town, and your Hero is not here, you can still use your Units (for free).
   \item Each settlement is defend by clans Settlement defenders. (see below)
 \end{itemize}
@@ -107,7 +107,7 @@ Conquer all Settlements by any player.
     \end{itemize}
    \item \textbf{\nth{7} Round:}
     \begin{itemize}
-      \item After you draw Might and Magic Cards at start of round, you can once discard any number of Cards and draw a same number of Cards.
+      \item During this round, Players can discard and draw Cards at the start of their turn twice rather than once.
     \end{itemize}
   \end{itemize}
 
@@ -127,7 +127,7 @@ Conquer all Settlements by any player.
 \subsection*{\MakeUppercase{Settlements defenders}}
 \begin{itemize}
   \item The strength of the army in Settlement is determined by the table \textit{Enemy's Clans armies} (last row).
-  \item After you draw an enemy army, you can discard one enemy Unit Card and draw a new Unit of same Tier.
+  \item After draw an enemy army, Player can discard one enemy Unit Card and draw a new Unit of same Tier.
   \item The battle does not cost any extra movement points.
   \item In this battles, you has to use AI Cards.
   \item After won battle, you gain one Level.
