--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -104,7 +104,7 @@ Conquer all Settlements by any player.
     \end{itemize}
    \item \textbf{\nth{7} Round:}
     \begin{itemize}
-      \item During this round, Players can discard and draw Cards at the start of their turn twice rather than once.
+      \item During this Round, Players can discard and draw Cards at the start of their turn twice rather than once.
     \end{itemize}
   \end{itemize}
 
