--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = en_US
 \addscenariosection{1}{Cooperative Scenario}{Close to enemies}{\images/balistic.png}
 
-\begin{multicols*}{2}
+\begin{multicols}{2}
 
 \textbf{Author:} Kelghor
 
@@ -130,10 +130,16 @@ Conquer all Settlements by any player.
   \item After won battle, you gain one Level.
 \end{itemize}
 
-\end{multicols*}
+\columnbreak
+
+\vspace*{\fill}
+
+\end{multicols}
+
+\vspace{2em}
 
 \begin{center}
-  \hommtable[]{15}{
+  \hommtable[]{16}{
     \centering
     \medskip
     \textbf{Enemy's Clans armies}\\
@@ -172,6 +178,7 @@ Conquer all Settlements by any player.
   }
 \end{center}
 
+\vspace{2em}
 
 \begin{center}
   \begin{figure}[h!]
