Add more art to Titans' Stronghold

--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -63,6 +63,10 @@ Kill all Units in the Titans' Stronghold (the center of Tile VI--VII next to Til
 
 There are undefeated Units left in the Titans' Stronghold at the end of Round 16 (15 on Impossible difficulty).
 
+\begin{tikzpicture}[overlay]
+  \node[inner sep=0pt, opacity=0.3] at (0, -6.2) {\includegraphics[width=0.75\linewidth, keepaspectratio]{\art/shackles_of_war.png}};
+\end{tikzpicture}
+
 \subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{\nth{4}, \nth{8} and \nth{12} Rounds:}
