--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -243,16 +243,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:50
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{For a 2-player Scenario:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 2 × Starting (I) Map Tile\n"
-#| "  \\item 2 × Near (IV--V) Map Tile\n"
-#| "  \\item 4 × Far (II--III) Map Tile\n"
-#| "  \\item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item 2 × Starting (I) Map Tile\n"
@@ -261,12 +252,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Dla Scenariusza dwuosobowego:}\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Początkowy (I) Kafelek Mapy\n"
-"  \\item 2 × Bliski (IV--V) Kafelek Mapy\n"
-"  \\item 4 × Daleki (II--III) Kafelek Mapy\n"
-"  \\item 1 × Centralny (VI--VII) Kafelek Mapy, który musi zawierać Smoczą Utopię\n"
+"  \\item 4 × Bliski (IV--V) Kafelek Mapy\n"
+"  \\item 4 × Daleki (II--III) Kafelek Mapy z Obeliskiem\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -428,19 +417,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:98
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Players can trade resources when one of the active player's Heroes Visits a trading post or stands on a Field adjacent to an allied Hero.\n"
-#| "  \\item The Hero who defeats an enemy army gains 2 \\svg{experience}.\n"
-#| "    The victorious player rolls two Treasure Dice and resolves one of them.\n"
-#| "  \\item Additionally, no player can:\n"
-#| "  \\begin{itemize}\n"
-#| "      \\item Attack other Heroes.\n"
-#| "      \\item Capture a Mine or Settlement that is already Flagged.\n"
-#| "  \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Ignore all yellow borders on Starting Tiles.\n"
@@ -456,6 +433,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
+"  \\item Zignoruj wszystkie żółte granice na Kafelkach Startowych.\n"
 "  \\item Gracze mogą handlować zasobami, gdy jeden z Bohaterów aktywnego gracza odwiedza punkt handlowy lub stoi na Polu sąsiadującym z sojuszniczym Bohaterem.\n"
 "  \\item Bohater, który pokona wrogą armię, zdobywa 2 \\svg{experience}.\n"
 "    Zwycięski gracz rzuca dwoma Kośćmi Skarbów i rozpatruje wynik jednej z nich.\n"
@@ -521,15 +499,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:122
-#, fuzzy, no-wrap
-#| msgid ""
-#| "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
-#| "  \\item Enemy armies have 3 MPs per Round.\n"
-#| "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
-#| "    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
-#| "  \\item If an enemy's movement could go in different directions, the players decide which way they go.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "  \\item Enemy armies have 3 MPs per Round.\n"
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
@@ -539,8 +509,8 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\item Wrogie armie ruszają się na końcu każdej tury, zaczynając od tury, w której się pojawiły.\n"
 "  \\item Wrogie armie mają 3 Punkty Ruchu na Rundę.\n"
+"  \\item Wrogie armie ruszają się na końcu każdej tury, zaczynając od tury, w której się pojawiły.\n"
 "  \\item Wrogie armie poruszają się zgodnie z opisem w Księdze Zasad (s.\\,33), ale zamiast zdobywania, niszczą wszystko na swojej drodze.\n"
 "    Umieść Czarną Kostkę na każdym Polu, przez które przechodzą, odtąd traktując te Pola jako puste.\n"
 "  \\item Jeśli ruch armii wroga mógłby odbyć się w różnych kierunkach, gracze decydują, w którą stronę ona pójdzie.\n"
