--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -293,7 +293,7 @@ msgid ""
 msgstr ""
 "\\textbf{Dla Scenariusza trzyosobowego:}\n"
 "\\begin{itemize}\n"
-"  \\item 3 × Startowy (I) Kafelek Mapy\n"
+"  \\item 3 × Początkowy (I) Kafelek Mapy\n"
 "  \\item 3 × Daleki (II--III) Kafelek Mapy\n"
 "  \\item 3 × Bliski (IV--V) Kafelek Mapy\n"
 "  \\item 1 × Centralny (VI--VII) Kafelek Mapy; umieść Czarną Kostkę lub figurkę reprezentującą Smoka w centrum Kafelka\n"
