--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -34,8 +34,7 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.
 
-\textbf{Additional Bonus:} Search (2) the Artifact Deck
-
+\textbf{Bonus:} Each player gets difficulty bonus and additionally \textbf{Searches (2)} the Artifact Deck
 \vspace*{\fill}\columnbreak
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -80,7 +79,6 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 \begin{itemize}
   \item Repeat the Timed Events of Rounds \mbox{7 and 8.}
 \end{itemize}
-\vspace{-0.5em}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
@@ -110,6 +108,8 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 
   \item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.
   Rounds 8 and 10 are entirely random.
+  % \vspace*{\fill}\columnbreak
+  
   \item If the Tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.
   \item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.
 
@@ -124,11 +124,11 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 
 \begin{itemize}
   \item Fighting enemy armies over more than one Combat Round does not cost Movement Points.
-  \item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate.
-    A retreating Main Hero loses all remaining MPs and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.
+  \item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate. A retreating Main Hero loses all remaining MPs and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.
   \item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.
   \item Killed enemy Units do not respawn.
 \end{itemize}
+\vspace*{\fill}\columnbreak
 
 \subsection*{\MakeUppercase{Boss Army}}
 
@@ -136,23 +136,19 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
   \item In Round 10, a Boss Army spawns. It is different from previous armies because it is Reinforced from a fixed pool of Neutral Units (Reinforcement pool = number in brackets in the table below).
   \item At the beginning of the \nth{2} Combat Round and every following Round, 2 Units Reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 Units) to continue the fight until either the player retreats or every Neutral Unit from the Reinforcement pool is killed. \textit{If the number of enemy Units at the beginning of a Round is 1 or lower, draw up to a total of 4 Units (i.e., there are always 4 or 5 enemy Units on the Board after Reinforcing, if available).}
   \item Place the Reinforcing Units on the enemy base line, starting from the left with the lowest Initiative (\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.
+  \vspace*{\fill}\columnbreak
   \item When a player retreats, the enemy army draws up to the ``minimum'' of 4 Units and takes these as starting Units to the next fight.
+  \vspace*{\fill}
 \end{itemize}
-
-\columnbreak
-
-\vspace*{\fill}
 
 \end{multicols}
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (14, 2) {\includegraphics[width=0.4\paperwidth]{\maps/sentinels.png}};
+  \node at (14, 6) {\includegraphics[width=0.4\paperwidth]{\maps/sentinels.png}};
 \end{tikzpicture}
 
-\vspace*{\fill}
-
-\hommtable[]{20}{
+\hommtable[]{18}{
   \centering
   \medskip
   \textbf{Strength of Enemy Armies}\\
@@ -187,6 +183,6 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
   \end{tabularx}
 }
 
-\vspace*{\fill}
+% \vspace*{\fill}
 
 \footnotetext[1]{Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is random\label{azure}.}
