--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -35,9 +35,6 @@ This Scenario is played over 16 Rounds (15 on Impossible difficulty).
 \textbf{Town Buildings:} None
 
 \textbf{Map Tile Pool:} None
-
-\textbf{Additional Bonus:} None
-
 \vspace*{\fill}\columnbreak
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -73,7 +70,6 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
 \begin{itemize}
   \item Remove all Black Cubes from every Windmill, Water Wheel, and Mystical Garden on the map.
 \end{itemize}
-
 \vspace*{\fill}\columnbreak
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -96,6 +92,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
 
   \item Whenever a player Visits an Obelisk, that player rolls one treasure Die and one resource Die, and resolves one of them.
   \item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit Cards from each of their corresponding Decks to create a separate Deck of Neutral Units for the Titans' Stronghold (the Deck of the Titans' Stronghold is sometimes split in two because certain Scenarios are otherwise impossible to implement with the Cards from certain expansions).
+  \vspace*{\fill}\columnbreak
 
   \item Any time a Hero enters the Titans' Stronghold, they draw 5 Cards from the Titans' Stronghold Deck instead of from the Neutral Unit Card Decks. The Units are placed on the Combat Board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the Units they find in the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit Decks instead of the Titans' Stronghold Deck. Any Neutral Units surviving Combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold Deck. If there are not enough Unit Cards in this Deck, draw as many Unit Cards as are available and place them on the Combat Board.
   \item Combat in the Titans' Stronghold now costs 1 MP to extend per Combat Round, just like Combat against non-Azure tier Units.
@@ -105,13 +102,11 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
     \item Capture a Mine or Settlement that is already controlled.
   \end{itemize}
 \end{itemize}
-
 \vspace*{\fill}
 
 \begin{center}
-  \includegraphics[width=\linewidth]{\art/dimension_door.png}
+  \includegraphics[width=0.8\linewidth, keepaspectratio]{\art/dimension_door.png}
 \end{center}
-
 \vspace*{\fill}
 
 \end{multicols*}
@@ -186,13 +181,11 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
     3\bronze 8\silver 10\golden 6\azure}\\
   \end{tabularx}
 }
-
 \vspace*{\fill}
 
 \begin{center}
   \transparent{0.3}{\includegraphics[width=0.6\linewidth, keepaspectratio]{\art/land_mine.png}}
 \end{center}
-
 \vspace*{\fill}
 
 \newpage
