--- a/main_pl.tex
+++ b/main_pl.tex
@@ -22,6 +22,7 @@
   Dodawanie nowych scenariuszy, wprowadzanie zmian oraz poprawki są mile widziane.
 }
 \newcommand{\pageshorthand}{p.}
+\newcommand{\dialog}{\-\ \hspace{0.7em} -- }
 
 \newcommand{\qrgithub}{Skanuj, aby otworzyć repozytorium na \textbf{GitHubie}.}
 
