--- a/translations/castle_greek_gift.tex/pl.po
+++ b/translations/castle_greek_gift.tex/pl.po
@@ -734,8 +734,8 @@ msgid ""
 "I expected you might come when I spied the rot taking form in the hills.''\n"
 "\n"
 msgstr ""
-"Głosem głębszym i bardziej donośnym niż u jakiegokolwiek mężczyzny, anioł jako pierwszy przemówił.\n"
-"- ,,Królowo Katarzyno. Spodziewałem się, że przybędziesz, gdy dostrzegłem, jak zgnilizna na wzgórzach nabiera kształtów.''\n"
+"Głosem głębszym i bardziej donośnym niż u jakiegokolwiek mężczyzny, anioł jako pierwszy przemówił.\\\\\n"
+"\\dialog Królowo Katarzyno. Spodziewałem się, że przybędziesz, gdy dostrzegłem, jak zgnilizna na wzgórzach nabiera kształtów.\n"
 "\n"
 
 #. type: multicols*
@@ -750,9 +750,9 @@ msgid ""
 "\n"
 msgstr ""
 "Katarzyna odpowiedziała uśmiechem.\n"
-"Dobrze było widzieć, że wciąż ma sojuszników; jej siły wymagały wzmocnienia, by stawić czoła nieumarłym.\n"
-"- ,,Miło cię widzieć, przyjacielu.'' – powiedziała - ,,Wygląda na to, że Steadwick znów jest zagrożone, a ja ruszam, by wyplenić zło, zanim zdąży zapuścić korzenie.\n"
-"Czy dołączysz do mnie?''\n"
+"Dobrze było widzieć, że wciąż ma sojuszników; jej siły wymagały wzmocnienia, by stawić czoła nieumarłym.\\\\\n"
+"\\dialog Miło cię widzieć, przyjacielu -- powiedziała -- Wygląda na to, że Steadwick znów jest zagrożone, a ja ruszam, by wyplenić zło, zanim zdąży zapuścić korzenie.\n"
+"Czy dołączysz do mnie?\n"
 "\n"
 
 #. type: multicols*
@@ -766,7 +766,7 @@ msgid ""
 "Catherine smiled wide as she watched more angels appear, then looked back to her forces and extended an open palmed arm forward in a command to march.\n"
 "\n"
 msgstr ""
-"- ,,Oczywiście, moja królowo!'' - wykrzyknął anioł - ,,Razem żadne zło nas nie zatrzyma!''\n"
+"\\dialog Oczywiście, moja królowo! -- wykrzyknął anioł -- Razem żadne zło nas nie zatrzyma!\\\\\n"
 "Gdy tylko ostatnie słowa opuściły jego usta i zaczęły rozbrzmiewać echem, dobył swoją broń.\n"
 "Ostrze długiego miecza zapłonęło, gdy tylko opuściło pochwę, a jego oślepiająca chwała sprawiła, że większość klęczących odwróciła wzrok.\n"
 "Zaraz potem wzbił się w powietrze i zaczął krążyć po okolicy.\n"
@@ -967,8 +967,8 @@ msgid ""
 "``Find him!'' she roared, addressing whatever gods were listening as well as the angels above.\n"
 "\n"
 msgstr ""
-"Katarzyna uniosła głowę ku niebu. Archanioły krążyły nad nią. Łzy zbierały się jej w oczach na myśl o utracie tego, nad czym tak ciężko pracowała.\n"
-"- ,,Znajdźcie go!'' - ryknęła, zwracając się do jakichkolwiek bogów, którzy mogli słyszeć, oraz do aniołów nad nią.\n"
+"Katarzyna uniosła głowę ku niebu. Archanioły krążyły nad nią. Łzy zbierały się jej w oczach na myśl o utracie tego, nad czym tak ciężko pracowała.\\\\\n"
+"\\dialog Znajdźcie go! -- ryknęła, zwracając się do jakichkolwiek bogów, którzy mogli słyszeć, oraz do aniołów nad nią.\n"
 "\n"
 
 #. type: multicols*
@@ -978,7 +978,7 @@ msgid ""
 "``Is that… wise?'' Rion asked softly.\n"
 "\n"
 msgstr ""
-"- ,,Czy to… rozsądne?'' - spytał cicho Rion.\n"
+"\\dialog Czy to… rozsądne? -- spytał cicho Rion.\n"
 "\n"
 
 #. type: multicols*
@@ -991,9 +991,9 @@ msgid ""
 "If we want to save Steadwick, we have to end him before he can further strengthen himself.''\n"
 "\n"
 msgstr ""
-"W oczach Katarzyny płonął ogień.\n"
-"- ,,Na co zdać się może odbudowa, skoro ten nikczemnik będzie dalej knuł swoje intrygi?'' – powiedziała - ,,Nie.\n"
-"Jeśli chcemy ocalić Steadwick, musimy go zniszczyć, zanim zdoła zebrać większe siły.''\n"
+"W oczach Katarzyny płonął ogień.\\\\\n"
+"\\dialog Na co zdać się może odbudowa, skoro ten nikczemnik będzie dalej knuł swoje intrygi? -- powiedziała -- Nie.\n"
+"Jeśli chcemy ocalić Steadwick, musimy go zniszczyć, zanim zdoła zebrać większe siły.\n"
 "\n"
 
 #. type: multicols*
