--- a/translations/castle_greek_gift.tex/pl.po
+++ b/translations/castle_greek_gift.tex/pl.po
@@ -637,7 +637,7 @@ msgid ""
 "Instead, he merely pointed with a trembling hand toward the window across the room.\n"
 "\n"
 msgstr ""
-"Zanim zdążyła poderwać się z fotela, drewniane wrota rozwarły się ukazując przerażonego strażnika z wybałuszonymi oczyma.\n"
+"Zanim zdążyła poderwać się z fotela, drewniane wrota rozwarły się, ukazując przerażonego strażnika z wybałuszonymi oczyma.\n"
 "Mężczyzna nie wydał z siebie ani słowa; groza, która go ogarnęła, wydawała się absolutna.\n"
 "Zamiast tego, drżącą ręką wskazał w stronę okna po drugiej stronie komnaty.\n"
 "\n"
@@ -721,7 +721,7 @@ msgid ""
 "\n"
 msgstr ""
 "Z błyskawiczną szybkością postać wylądowała tuż przed nimi, ukazując szczeciniastą, acz przystojną twarz młodego mężczyzny ze złotymi, kręconymi dredami i imponująco masywną brązową zbroją wyrzeźbioną na jego umięśnionym ciele.\n"
-"Był to jednem ze słynnych Archaniołów, którzy pozostali w pobliżu Steadwick po zwycięstwie Katarzyny.\n"
+"Był to jeden ze słynnych Archaniołów, którzy pozostali w pobliżu Steadwick po zwycięstwie Katarzyny.\n"
 "Podczas gdy armia za nią uklękła w hołdzie, ona jedynie skinęła głową z dumną determinacją.\n"
 "\n"
 
