--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -29,17 +29,16 @@ This Scenario is played over 13 Rounds.
 
 \textbf{Map Tile Pool:} Each player takes 2 random Far (II--III) Map Tiles, one of which must contain a Settlement
 
-\textbf{Additional Bonus:} None
-
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
+\vspace*{\fill}\columnbreak
 
 \textbf{For a 2-player Scenario:}
 \begin{itemize}
   \item 2 × Starting (I) Map Tile
-  \item 4 × Near (IV--V) Map Tile, all of which must contain an Obelisk
+  \item 4 × Near (IV--V) Map Tile, 4 of which must contain an Obelisk
   \item 4 × Far (II--III) Map Tile, 2 of which must contain a Settlement
-  \item 1 × Center (VI--VII) Map Tile, which must contain the Grail Field
+  \item 1 × Center (VI--VII) Map Tile with the Grail Field
 \end{itemize}
 
 \textbf{For a 4-player Scenario:}
@@ -47,7 +46,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 4 × Starting (I) Map Tile
   \item 6 × Near (IV--V) Map Tile, 4 of which must contain an Obelisk
   \item 8 × Far (II--III) Map Tile, 4 of which must contain a Settlement
-  \item 1 × Center (VI--VII) Map Tile, which must contain the Grail Field
+  \item 1 × Center (VI--VII) Map Tile with the Grail Field
 \end{itemize}
 
 \textbf{\MakeUppercase{Note:}} Before placing the Near Tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the Tiles with an Obelisk are not placed adjacent to each other.
@@ -88,7 +87,8 @@ During this Scenario:
       \item \textbf{[3rd Obelisk]} You gain a Secondary Hero. Place their model on this Field. If you already have a Secondary Hero, gain 3 \svg{gold} instead. Then, choose one enemy player to discard 2 random Cards from their hand.
       \item \textbf{[4th Obelisk]} Remove up to 4 Cards from your hand, except Statistic Cards; then, search each corresponding Deck for a Card of your choice and put it in your hand.
     \end{enumerate}
-    \item \textbf{[Sacrifice]} Remove a * Faction Unit Card from your Unit Deck in exchange for:
+    \vspace*{\fill}\columnbreak
+    \item \textbf{[Sacrifice]} Exchange a * Faction Unit Card from your Unit Deck for:
     \begin{enumerate}
       \item *\svgunit{bronze}: Gain 6 \svg{gold}, 3 \svg{building_materials}, and 1 \svg{valuables}. Additionally, if the Unit Card was on the Pack side, \textbf{Search (4)} the Minor Artifact Deck.
       \item *\svgunit{silver}: Gain 12 \svg{gold}, 6 \svg{building_materials}, and 2 \svg{valuables}. Additionally, if the Unit Card was on the Pack side, \textbf{Search (3)} the Major Artifact Deck.
@@ -116,13 +116,11 @@ During this Scenario:
   \item A Hero with the Grail Token who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction Cube on the Grail Token to mark this effect.
   \item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat Round, if the Hero is a \textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \svg{damage-red} from your Units.''
 \end{itemize}
-
 \vspace*{\fill}
 
 \begin{center}
   \transparent{0.3}{\includegraphics[width=0.5\linewidth, keepaspectratio]{\art/bless.png}}
 \end{center}
-
 \vspace*{\fill}
 
 \end{multicols*}
