--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -108,7 +108,6 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 
   \item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.
   Rounds 8 and 10 are entirely random.
-  % \vspace*{\fill}\columnbreak
   
   \item If the Tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.
   \item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.
@@ -128,6 +127,10 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
   \item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.
   \item Killed enemy Units do not respawn.
 \end{itemize}
+
+\begin{tikzpicture}[overlay, anchor=north west]
+  \node {\includegraphics[width=\columnwidth, keepaspectratio]{\art/berserk.png}};
+\end{tikzpicture}
 \vspace*{\fill}\columnbreak
 
 \subsection*{\MakeUppercase{Boss Army}}
@@ -138,15 +141,13 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
   \item Place the Reinforcing Units on the enemy base line, starting from the left with the lowest Initiative (\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.
   \vspace*{\fill}\columnbreak
   \item When a player retreats, the enemy army draws up to the ``minimum'' of 4 Units and takes these as starting Units to the next fight.
-  \vspace*{\fill}
 \end{itemize}
 
-\end{multicols}
-
-\begin{tikzpicture}[overlay]
-  \centering
-  \node at (14, 6) {\includegraphics[width=0.4\paperwidth]{\maps/sentinels.png}};
+\begin{tikzpicture}[overlay, anchor=north west]
+  \node {\includegraphics[width=\columnwidth, keepaspectratio]{\maps/sentinels.png}};
 \end{tikzpicture}
+
+\end{multicols}
 
 \hommtable[]{18}{
   \centering
