--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -33,8 +33,7 @@ This Scenario is played over a maximum of 11 Rounds.
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling
 
 \textbf{Map Tile Pool:} None
-
-\textbf{Additional Bonus:} None
+\vspace*{\fill}\columnbreak
 
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
@@ -42,7 +41,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 2 × Starting (I) Map Tile
   \item 2 × Far (II-III) Map Tile
   \item 5 × Near (IV-V) Map Tile
-  \item 2 × Center (VI-VII) Map Tiles, blindly choosing one with the Random Town Field and the other with a Dragon Utopia Field.
+  \item 2 × Center (VI-VII) Map Tiles, blindly choosing one with the Random Town Field and the other with a Dragon Utopia Field
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
@@ -58,7 +57,7 @@ However, if the Random Town is first captured in the \nth{10} Round, the game pr
   \textbf{\nth{4} and \nth{8} Round:}
 \begin{itemize}
   \item Remove all Black Cubes from Water Wheels and Windmills on the map.
-  \item All Heroes gain +1 \svgeven{movement}
+  \item All Heroes gain +1 \svgeven{movement}.
 \end{itemize}
 
 \end{multicols*}
@@ -94,4 +93,3 @@ During this Scenario:
   \centering
   \node at (8.5, -4) {\includegraphics[width=0.7\paperwidth]{\maps/dragoncurse-castle.png}};
 \end{tikzpicture}
-
