--- a/clash/force_of_will.tex
+++ b/clash/force_of_will.tex
@@ -31,8 +31,6 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Map Tile Pool:} Each player takes 1 random Far (II--III) Map Tile
 
-\textbf{Additional Bonus:} None
-
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
@@ -43,13 +41,14 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 4 × Far (II--III) Map Tile
   \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field
 \end{itemize}
+\vspace*{\fill}\columnbreak
 
 \textbf{For a 3-player Scenario:}
 \begin{itemize}
   \item 3 × Starting (I) Map Tile
   \item 3 × Near (IV--V) Map Tile
   \item 6 × Far (II--III) Map Tile
-  \item 1 × Center (VI--VII) Map Tile, which must contain the Dragon Utopia Field
+  \item 1 × Center (VI--VII) Map Tile with the Dragon Utopia Field
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
@@ -77,6 +76,7 @@ During this Scenario:
 \begin{itemize}
   \item When a player Visits an Obelisk, they roll 2 \svg{treasure} and choose one to resolve.
   \item A player may not use the Diplomacy Card to skip Combat on the Dragon Utopia Field.
+  \vspace*{\fill}\columnbreak
   \item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:
   \begin{itemize}
     \item \textbf{Easy:} 1 × \svgunit{azure}, 2 × \svgunit{silver}, 1 × \svgunit{bronze}
@@ -93,10 +93,10 @@ During this Scenario:
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (14, 4) {\includegraphics[width=\linewidth]{\_assets/maps/force-of-will-2p.png}};
-  \node at (14, -3) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
-  \node at (7, -7) {\includegraphics[width=1.35\linewidth]{\_assets/maps/force-of-will-3p.png}};
-  \node at (7, -13.5) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
+  \node at (14, 5) {\includegraphics[width=\linewidth]{\_assets/maps/force-of-will-2p.png}};
+  \node at (14, -2) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
+  \node at (7, -6) {\includegraphics[width=1.35\linewidth]{\_assets/maps/force-of-will-3p.png}};
+  \node at (7, -12.5) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
 \end{tikzpicture}
 
 \end{multicols*}
