--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -150,7 +150,7 @@ You run out of time -- you have time till the end of the Round 16.
 \textbf{\nth{10} Round:}
 \begin{itemize}
   \item For any Enemy Settlements (F3, F10, \#F1) that have not been defeated, an additional Enemy
-    Charging Hero of that Faction appears on each Settlement at the beginning of this Round.
+    Charging Hero of that Faction appears on each Settlement.
 \end{itemize}
 
 \textbf{\nth{11} Round:}
@@ -205,11 +205,11 @@ During this ``Inferno'' Campaign Scenario, the following rules apply:
       Gate'' location (only if you have the ``Castle Gate'' built in your Town).
 \end{itemize}
 
-\vspace*{\fill}
+% \vspace*{\fill}
 \begin{center}
-  \framedimage[0.9\linewidth]{\art/demon.jpg}
+  \framedimage[\columnwidth]{\art/demon.jpg}
 \end{center}
-\vspace*{\fill}
+% \vspace*{\fill}
 
 \end{multicols*}
 
