Deal With The Devil
Rearranged contents of the Deal With The Devil scenario.

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -40,7 +40,8 @@ This Scenario plays out over 14 Rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, City Hall, Citadel
 
-\textbf{Bonus:} Add a ``war machine'' of your choice to your hand.
+\textbf{Bonus:} Add a War Machine card of your choice to your hand.
+\vspace*{\fill}\columnbreak
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
@@ -66,6 +67,7 @@ This Scenario plays out over 14 Rounds.
   1 × ``Ballistics'' Ability Card (at Basic effect), 1 × ``First Aid'' Ability Card (at Expert effect)
 
 Charging Armies \#1 and \#2 use the same AI Deck and Skill Deck. Reshuffle both Decks after Combat.
+\vspace*{\fill}\columnbreak
 
 Both Artifact Cards of all Charging Armies are treated as Skills, and use the top ``less powerful'' effect on the Card.
 The ``Sword of Hellfire'' will be used in attacks and retaliation attacks.
@@ -103,8 +105,6 @@ The Enemy Charging Rampart Hero \#1 starts on the center Field of the S4 Startin
 The Enemy Charging Castle Hero \#1 starts on the center Field of S3 Starting Map Tile.
 
 Place your Hero on the center Field of the S6 Inferno Starting Map Tile.
-
-You cannot Recruit a Secondary Hero.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -147,6 +147,7 @@ Clan Kreelah fails to defend Klessive against the Enemy Charging Heros attemptin
   \item The Enemy Castle Charging Hero \#2 appears on the Settlement Field of the F3 Tile or on the center Field of S3 Starting Map Tile (your choice).
   \item The Enemy Rampart Charging Hero \#2 appears on the center Field of the S4 Starting Map Tile.
 \end{itemize}
+\vspace*{\fill}\columnbreak
 
 \textbf{\nth{10} Round:}
 \begin{itemize}
@@ -174,8 +175,11 @@ Clan Kreelah fails to defend Klessive against the Enemy Charging Heros attemptin
 During this ``Inferno'' Campaign Scenario, the following rules apply:
 
 \begin{itemize}
+  \item You cannot Recruit a Secondary Hero.
   \item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.
   \item You cannot attack Enemy Charging Heroes. You can only defend against them while inside of Kleesive.
+  \item Castle and Rampart already have all Mines controlled in their territory (non-Inferno Map Tiles). Place enemy
+      Cubes on all of their Mines.
   \item Gain 3 \svg{gold} when you defeat a Charging Hero's Army.
   \item If an Enemy Charging Hero enters a Map Tile or Field that your Main Hero is on (exception is if you are in
     your Inferno city Kleesive), or if a charging Hero attacks Kleesive and you are not present in your city
@@ -187,8 +191,6 @@ During this ``Inferno'' Campaign Scenario, the following rules apply:
     else. They also make use of Stables 1 MP bonus.
   \item Enemy Charging Heros always move amongst each to not ``block'' each other's paths (thus slowing each
     other down). The Enemy Charging Hero that can get closest to Kleesive will move before any others.
-  \item Castle and Rampart already have all Mines controlled in their territory (non-Inferno Map Tiles). Place enemy
-    Cubes on all of their Mines.
   \item Your Walls, Gates, and Arrow Tower in Kleesive are completely rebuilt after each battle.
   \item Enemy \svg{unit_flying} Units will fly over Walls and Gates to attack your Units whenever possible.
   \item Enemy \svg{unit_ranged} Units will always attack the Arrow Tower once there are no other \svg{unit_ranged} Units to attack.
@@ -196,9 +198,7 @@ During this ``Inferno'' Campaign Scenario, the following rules apply:
     and then Walls will be attacked.
 \end{itemize}
 
-\vspace*{\fill}
-\includegraphics[width=\linewidth, keepaspectratio]{\art/cerberi.png}
-\vspace*{\fill}
+\includegraphics[width=\columnwidth, keepaspectratio]{\art/cerberi.png}
 
 \end{multicols*}
 
