--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -118,7 +118,7 @@ Conquer all Settlements by any player.
   \item The battle does not cost any extra movement points.
   \item The strength of the siege army is determined by the table \textit{Enemy's Clans armies}.
   \item If your main Hero is present in any of allied town (not settlement) and Clan wave attack your allied town where is no main Hero, you can participate on defending allied castle by using Might and Magic Cards (Simply: you defend your teammate's castle with their Units and your Hero's Cards).
-  \item If you defended your town, gain one \svg{experience}. It doesn't matter if the main Hero was in the fight.
+  \item Gain one \svg{experience} when successfully defending your Town, regardless of whether your main Hero participated.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Settlements defenders}}
