--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -40,7 +40,7 @@ This Scenario plays out over 14 Rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, \svgunit{silver} Dwelling, City Hall, Citadel
 
-\textbf{Bonus:} Add a War Machine card of your choice to your hand.
+\textbf{Bonus:} Add a War Machine Card of your choice to your hand.
 \vspace*{\fill}\columnbreak
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
