--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -111,7 +111,7 @@ Conquer all Settlements by any player.
 \subsection*{\MakeUppercase{Enemy's clans waves}}
 \begin{itemize}
   \item If enemy's settlement is not conquered, then enemy clans armies are attacking your castle!
-  \item At the start of the each player's turn, the battle begins.
+  \item A battle occurs at the start of each player's turn.
   \item Before attack, you can use your building, spell book and population tokens, and use Might and Magic Cards, but you can't move with Hero.
   \item Each player has to defend his own castle.
   \item If you have citadel, \textit{Arrow tower} has decreased attack. The attack is for first/second/third wave as 2/3/4\svg{attack}.
